# qrlabels

./: .gitignore  README.md  gentoken.sh  pyproject.toml
priv/: page.tex
qrlabels/: labels.py
tests/: test_qrlabels.py
