[tool.poetry]
name = "qrlabels"
version = "0.1.0"
description = ""
authors = ["Pawel Peregud <paulperegud@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
qrcode = {extras = ["pil"], version = "^7.3.1"}
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
